# TCC_Reddit_Bot

./: .gitattributes  .gitignore  LICENSE  README.md  tabela-municipios.xls
DataSourceHandler/: .gitignore  CMakeLists.txt  lembrete.txt  main  main.cpp
DataSourceHandler/include/: DatabaseConnection.h  Posts.h  RedditsPosts.h  RedditsPostsRepository.h
DataSourceHandler/src/: DatabaseConnection.cpp  Posts.cpp  RedditsPosts.cpp  RedditsPostsRepository.cpp  main.cpp
python_scripts/: salvar_municipios_no_banco_de_dados.py
subreddits23/: AskComputerScience_submissions.zst  AskProgramming_submissions.zst  CodingHelp_submissions.zst  ProgrammingLanguages_submissions.zst  brdev_comments.zst  brdev_submissions.zst  coding_submissions.zst  developer_submissions.zst  learnprogramming_comments.zst  learnprogramming_submissions.zst  programacao_comments.zst  programacao_submissions.zst  programming_submissions.zst  programminghelp_submissions.zst
tcc_reddit/: .gitignore  Dockerfile  docker-compose.yml  pom.xml
tcc_reddit/src/main/java/com/example/tcc_reddit/: TccRedditApplication.java
tcc_reddit/src/main/java/com/example/tcc_reddit/DTOs/: AccessTokenDTO.java  CustomRedditKindEntiryIdDeserializer.java  CustomUnixTimeDeserializer.java  JsonMapper.java
tcc_reddit/src/main/java/com/example/tcc_reddit/DTOs/reddit/: AccessTokenDTO.java
tcc_reddit/src/main/java/com/example/tcc_reddit/DTOs/viacep/: CepResultadoDTO.java
tcc_reddit/src/main/java/com/example/tcc_reddit/controller/: CategoriaController.java  MunicipioController.java
tcc_reddit/src/main/java/com/example/tcc_reddit/credentials/: AccessTokenDTO.java  AccessTokenResponce.java  Credentials.java
tcc_reddit/src/main/java/com/example/tcc_reddit/model/: Categoria.java  Municipio.java  SubReddit.java  SubRedditPost.java  SubRedditPostArquivoBruto.java  SubredditPostCategoria.java  SubredditpostCategoriaArquivoBruto.java
tcc_reddit/src/main/java/com/example/tcc_reddit/repository/: CategoriaRepository.java  MunicipioRepository.java  SubRedditPostArquivoBrutoRepository.java  SubRedditPostCategoriaArquivoBrutoRepository.java  SubRedditPostCategoriaRepository.java  SubRedditPostRepository.java  SubRedditRepository.java
tcc_reddit/src/main/java/com/example/tcc_reddit/service/: CategoriaService.java  MemoryService.java  MunicipioService.java  RedditArquivoBrutoService.java  RedditService.java  SubRedditPostArquivoBrutoService.java  SubRedditPostService.java  SubRedditService.java  SubredditPostCategoriaArquivoBrutoService.java  SubredditPostCategoriaServive.java
tcc_reddit/src/main/resources/: application.properties  application.yml
tcc_reddit/src/test/java/com/example/tcc_reddit/: TccRedditApplicationTests.java
tcc_reddit_front/: teste.txt
(+30 files in other folders)
